// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox should renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 12,
        "borderWidth": 6,
        "height": 60,
        "width": 60,
      }
    }
    value="Pepega"
  />
  <Text
    allowFontScaling={true}
  >
    Pepega
  </Text>
</View>
`;

exports[`CheckBox should renders correctly checked 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 12,
        "borderWidth": 0,
        "height": 60,
        "width": 60,
      }
    }
    value="Pepega"
  >
    <SvgMock
      height={60}
      width={60}
    />
  </View>
  <Text
    allowFontScaling={true}
  >
    Pepega
  </Text>
</View>
`;

exports[`CheckBox should renders correctly disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 0.4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 12,
        "borderWidth": 6,
        "height": 60,
        "width": 60,
      }
    }
    value="Pepega"
  />
  <Text
    allowFontScaling={true}
  >
    Pepega
  </Text>
</View>
`;
